# worrier-fitness

./: .cursorrules  .env  PyWhatKit_DB.txt  README.md  add_sample_data.py  app.py  create_admin.py  create_moderator.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  test.py
instance/: gym.db
templates/: add_member.html  admin_dashboard.html  announcements.html  base.html  index.html  login.html  member_details.html  members.html  plans.html  public_attendance.html  register.html  user_dashboard.html
templates/members/: add_member.html  add_plan.html  details.html  list.html  member_details.html  plans.html  renew.html
templates/staff/: add_staff.html  attendance.html  list.html  payments.html  record_payment.html  staff_details.html  staff_list.html
