[project]
name = "worrier-fitness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator==2.1.1",
    "flask==3.0.2",
    "flask-asgi",
    "flask-ext>=0.1",
    "flask-login==0.6.3",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "gunicorn>=23.0.0",
    "heyoo>=0.1.2",
    "python-dotenv==1.0.1",
    "pywhatkit>=5.4",
    "uvicorn>=0.34.0",
    "werkzeug==3.0.1",
]
